--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-    Hello World!!
+    Hello World!!</br>
+    nostyles : <a href="https://fantastic-creponne-082a9f.netlify.app/nostyles"> nostyles </a> </br>
+    style1 : <a href="https://fantastic-creponne-082a9f.netlify.app/style1"> style1 </a> </br>
+    style2 : <a href="https://fantastic-creponne-082a9f.netlify.app/style2"> style2 </a></br>
+    example: <a href="https://fantastic-creponne-082a9f.netlify.app/example"> example </a></br>
+    form: <a href="https://fantastic-creponne-082a9f.netlify.app/form"> form </a></br>
 </body>
 
 </html>
