--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     Hello World!!</br>
-    nostyles : <a href="https://fantastic-creponne-082a9f.netlify.app/nostyles"> nostyles </a> </br>
+    nostyles : <a href="https://fantastic-creponne-082a9f.netlify.app/nostyle"> nostyles </a> </br>
     style1 : <a href="https://fantastic-creponne-082a9f.netlify.app/style1"> style1 </a> </br>
     style2 : <a href="https://fantastic-creponne-082a9f.netlify.app/style2"> style2 </a></br>
     example: <a href="https://fantastic-creponne-082a9f.netlify.app/example"> example </a></br>
